# clickme

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
apps/backend/: .env.example  alembic.ini  pyproject.toml
apps/backend/migrations/: env.py
apps/backend/src/clickme/: __init__.py
apps/backend/src/clickme/bootstrap/: __init__.py  container.py  jobs.py  routers.py
apps/backend/src/clickme/entrypoints/: __init__.py
apps/backend/src/clickme/entrypoints/api/: __init__.py  main.py
apps/backend/src/clickme/entrypoints/worker/: __init__.py  main.py
apps/backend/src/clickme/foundation/: __init__.py  settings.py
apps/backend/src/clickme/foundation/auth/: __init__.py  cognito.py
apps/backend/src/clickme/foundation/database/: __init__.py  base.py  repository.py  session.py  transaction.py
apps/backend/src/clickme/foundation/llm/: __init__.py  anthropic.py  client.py  openai.py
apps/backend/src/clickme/foundation/storage/: __init__.py  s3.py
apps/backend/src/clickme/interfaces/: __init__.py
apps/backend/src/clickme/interfaces/http/: __init__.py  dependencies.py  exception_handlers.py  middleware.py
apps/backend/src/clickme/modules/: __init__.py
apps/backend/src/clickme/modules/campaign/: __init__.py  public.py
apps/backend/src/clickme/modules/creative/: __init__.py  public.py
apps/backend/src/clickme/modules/simulation/: __init__.py  public.py
apps/backend/src/clickme/shared/: __init__.py
apps/backend/tests/architecture/: test_module_boundaries.py  test_public_api_only.py  test_sdk_imports.py
contracts/: openapi.yaml
(+99 files in other folders)
